[metadata]
name = bosonsampling
version = 1.0.0
author = If and Only If (Iff) Technologies
author_email = john@qcatdavis.org
description = A library to help better understand Aaronson-Arkhipov Boson Sampling (AABS)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/IffTech/Boson-Sampling
project_urls =
    Bug Tracker = https://github.com/IffTech/Boson-Sampling/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Development Status :: 5 - Production/Stable
    Natural Language :: English
    Intended Audience :: Science/Research
    Intended Audience :: Education
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Scientific/Engineering :: Physics
py_modules = bosonsampling

[options] 
python_requires = >=3.6
install_requires = 
    numpy
    scipy
    thewalrus
    sympy